# Notebook-Cleaner-LLM-Friendly-Jupyter-to-Markdown

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  sample.ipynb  sample_cleaned.md  shrink_notebook.py
